--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ h1{
 	text-align:center;
 	margin:0 10px 12px 10px;
 }
-h2{font-family:'Lato', 'Open Sans', Arial, sans-serif;color:#778fbd;font-size:2.1em;font-weight:100;line-height: 1;margin-top:0;}
+h2{font-family:Lato, 'Open Sans', Arial, sans-serif;color:#778fbd;font-size:2.1em;font-weight:100;line-height: 1;margin-top:0;}
 @media (max-width:480px){h1{font-size:3em;font-weight:100;text-align:center;}
 }
 h3{color:#000;font-size:1.2em;font-weight:bold;border-bottom:solid 1px #999;}
