--- a/styles.css
+++ b/styles.css
@@ -132,13 +132,7 @@ a:hover{color:#333;text-decoration:none;}
 @media (max-width:800px){#bottom{margin:0;padding:0;border:0;width:99%;}
 }
 #bottom #update{font-size:0.7em;text-align:right; border: 1px}
-#about{margin:0;width:323px;height:18px;padding:2px 5px;background-color:#eee;border:thin solid #ddd;border-bottom:0;}
-#about ul{margin:0;padding:0;list-style:none;}
-#about ul li{float:left;font-size:1em;color:#999;font-weight:bold;padding:0 10px;border-right:thin solid #ccc;}
-#about ul li.last{border-right:0;padding-right:0;}
-#about ul li a{color:#333;text-decoration:none;}
-#about ul li a:hover{color:#ACC334;text-decoration:none;}
-#about ul li a.on{color:#778fbd;}
+
 
 /*#arxiv-link{background-image: url("images/ArXiv_logo_2022.png");
 background-repeat: no-repeat;}
@@ -156,6 +150,7 @@ display:inline;}
 display:inline-block;
 /*zoom:1;*/
 display:inline;}
+.pres { padding: 5px;}
 #alt ul li a:hover{text-decoration:none;background-color:#778fbd;color:#fff;}
 .bibItem { display:block; color:#000; text-decoration:none;padding-top:0px;padding-bottom:0px;border:1px solid #fff;border-radius:5px; border-top:2px solid #fff; border-right:2px solid #fff;}
 .bibItem:hover {border:1px solid #fff; color:#000; border-top:2px solid #778fbd; border-right:2px solid #778fbd;}
@@ -181,7 +176,9 @@ display:inline;
 #menu a.on {color:#000;background-color:#fff;border-bottom:3px solid #778fbd;}
 #menu a.on:hover {color:#000;background-color:#fff;border-bottom:3px solid #778fbd; border-top:0;}
 a.inactive, a.inactive:hover{opacity:.2;border-bottom:2px solid #fff;}
-#menu {position:relative;text-align:center;margin:0;padding:0;border:none;border-top:1px solid #778fbd;background:#fff;width:100%;z-index:10000;-webkit-z-index:10000;}
+#menu {position:relative;text-align:center;margin:0;padding:0;border:none;
+/*	border-top:1px solid #778fbd;*/
+	background:#fff;width:100%;z-index:10000;-webkit-z-index:10000;}
 #menu  ul{background:#fff;margin:0;padding:0;list-style-type:none;text-align:center;display:inline-block;font-size:0.8em;}
 #menu  ul > li{margin:0;padding-right:0.8em;list-style:none;display:-moz-inline-stack;
 display:inline-block;
@@ -276,9 +273,9 @@ display:inline;}
 #research {width:100%;}
 #calendar {width:100%;}
 #calendar .event {}
-#calendar .name {font-size:1.1em;color:#778fbd;}
-#calendar .when {font-size:0.7em;color:#000;margin-left:20px;}
-#calendar .where a {padding-left:0.5em;}
+.name {font-size:1.1em;color:#778fbd;}
+.when {font-size:0.7em;color:#000;margin-left:20px;}
+.where a {padding-left:0.5em;}
 #pastpag a {text-decoration:none; font-size:0.8em; color:#000;font-weight:bold;background-color:#fff;padding:2px 1em;border-top:1px solid #778fbd; border-radius:5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;}
