--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ background-repeat: no-repeat;}*/
 display:inline-block;
 /*zoom:1;*/
 display:inline;}
-#alt ul li a{color:#333;text-decoration:none;font-weight:bold;margin:0 0.1em;padding:0.2em 1em;list-style:none;border:1px solid #cbcfe4;border-radius:5px;text-align:center;display:-moz-inline-stack;
+#alt ul li img{color:#333;text-decoration:none;font-weight:bold;margin:0 0.1em;padding:0.2em 1em;list-style:none;border:1px solid #cbcfe4;border-radius:5px;text-align:center;display:-moz-inline-stack;
 display:inline-block;
 /*zoom:1;*/
 display:inline;}
