--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,10 @@ display:inline-block;
 /*zoom:1;*/
 display:inline;}
 .pres { padding: 5px;}
-#alt ul li a:hover{text-decoration:none;background-color:#778fbd;color:#fff;}
+#alt ul li a:hover{text-decoration:none;opacity: 0.5;
+  transition: opacity .55s ease-in-out;
+ -moz-transition: opacity .55s ease-in-out;
+ -webkit-transition: opacity .55s ease-in-out;}
 .bibItem { display:block; color:#000; text-decoration:none;padding-top:0px;padding-bottom:0px;border:1px solid #fff;border-radius:5px; border-top:2px solid #fff; border-right:2px solid #fff;}
 .bibItem:hover {border:1px solid #fff; color:#000; border-top:2px solid #778fbd; border-right:2px solid #778fbd;}
 .abstract {font-size:0.9em; text-decoration:none;padding-top:10px; padding-left:20px; padding-right:20px;}
